--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <head>
-	<title>Ian McDonald</title>
+	<title>Lauren Demers</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
