--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 </head>
 <body>
 	<main>
-		<h1>Welcome to my home page on the World Wide Web.</h1>
-		<p>Under construction. Check back later.</p>
+		<h1>Lauren Demers</h1>
 	</main>
 </body>
