--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
 <head>
+  <style>
+@import url('https://fonts.googleapis.com/css?family=Quicksand');
+</style>
 	<title>Lauren Demers</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
 	<main>
 		<h1>Lauren Demers</h1>
+    <p> My Webpage </p>
+
+	
 	</main>
 </body>
