--- a/index.html
+++ b/index.html
@@ -1,16 +1,29 @@
 <!DOCTYPE html>
 <head>
-  <style>
-@import url('https://fonts.googleapis.com/css?family=Quicksand');
-</style>
+  
 	<title>Lauren Demers</title>
 	<link rel="stylesheet" href="style.css">
 </head>
 <body>
-	<main>
-		<h1>Lauren Demers</h1>
-    <p> My Webpage </p>
-
 	
-	</main>
+
+	<div class="content">		
+		
+		<h1>Laur.</h1>
+			<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Probably Napping</h2>
+
+
+  
+  <p class="right"></p>
+
+</div><!-- /content -->
+
+
+
+
 </body>
+
+
+
+
+
