--- a/index.html
+++ b/index.html
@@ -1,29 +1,48 @@
 <!DOCTYPE html>
+<html>
 <head>
-  
-	<title>Lauren Demers</title>
-	<link rel="stylesheet" href="style.css">
+	<title>Hangman</title>
+	<link href="https://fonts.googleapis.com/css?family=Source+Sans+Pro" rel="stylesheet">
+	<script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
+	<link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<link rel="stylesheet" href="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/themes/smoothness/jquery-ui.css">
+	<script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+	<link rel='stylesheet' type='text/css' href='style.css'/>
+    <script type='text/javascript' src='scripts.js'></script>
 </head>
 <body>
-	
-
-	<div class="content">		
+	<header>
+		<h1>Hangman<h1>
+		<h3>Worlds Best Dried Fruit<h3>
+	</header>
+	<div id="main">
+		<div id="popUpBox">
+			<div id="popUpText">
+			</div>
+		</div>
+		<div id="lines">
+		</div>
+		<div id="inputArea">
+			<input type="text" id="guess">
+			<input type="submit" id="enter">
+		</div>
+		<div id="bottom">
+			<div id="incorrectGuesses">
+				<p>Incorrect Guesses: </p>
+				<p id="incGuessLetter"></p>
+			</div>
+			<div id="hangmanLives">
+				<p>Life</p>
+				<div id="display">
+					<p id="hangmanDisplay"></p>
+				</div>
+			</div>
+		</div>
 		
-		<h1>Laur.</h1>
-			<h2>&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;-Probably Napping</h2>
+	</div>
+	<footer>
+		<h3>hahahaha</h3>
+	</footer>
 
-
-  
-  <p class="right"></p>
-
-</div><!-- /content -->
-
-
-
-
-</body>
-
-
-
-
-
+	<html/>
